--- a/app/css/style.css
+++ b/app/css/style.css
@@ -17,8 +17,16 @@ body{
   margin-top: 5rem;
 }
 
+
+@media only screen and (max-width: 980px) {
+  .logo{
+    max-width: 65%;
+  }
+}
+
+
 @media only screen and (max-width: 800px) {
   .logo{
-    max-width: 75%;
+    max-width: 80%;
   }
 }
