--- a/app/css/style.css
+++ b/app/css/style.css
@@ -6,27 +6,21 @@ body{
 
 .logo-mask{
   position: fixed;
-  width: 100%;
-  left: 0;
-  top: 0;
+  width: 90%;
+  left: 5%;
+  right: 5%;
+  height: 100%
 }
 
 .logo{
-  max-width: 50%;
-  left: 0;
-  margin-top: 5rem;
-}
-
-
-@media only screen and (max-width: 980px) {
-  .logo{
-    max-width: 65%;
-  }
-}
-
-
-@media only screen and (max-width: 800px) {
-  .logo{
-    max-width: 80%;
-  }
+  max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
